; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_addall.c_addall_match_suffix.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_addall.c_addall_match_suffix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @addall_match_suffix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addall_match_suffix(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @GIT_UNUSED(i8* %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @git__suffixcmp(i8* %9, i8* %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 0, i32 1
  ret i32 %15
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @git__suffixcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
